// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Render Design Instance 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <div
          class="oj-design-form-title"
        >
          <h4>
            snack
          </h4>
        </div>
        <form
          data-testid="design-form"
        >
          <div
            class="oj-design-form"
          >
            <ul
              class="oj-form-group"
            >
              <li>
                <label>
                  Id
                  <input
                    data-testid="df_id"
                    type="text"
                    value="afternoon"
                  />
                </label>
              </li>
              <li>
                <label>
                  Description
                  <input
                    data-testid="df_description"
                    type="text"
                    value=""
                  />
                </label>
              </li>
              <li>
                <label>
                  Fruit
                  <div
                    class="oj-design-row"
                  >
                    <span
                      class="oj-design-select"
                    >
                      <select
                        data-testid="df_fruit_select"
                      >
                        <option
                          value=""
                        />
                        <option
                          value="value"
                        >
                          value
                        </option>
                        <option
                          value="apple"
                        >
                          apple
                        </option>
                        <option
                          value="orange"
                        >
                          orange
                        </option>
                      </select>
                    </span>
                    <span
                      class="oj-design-expand"
                    >
                      <button
                        data-testid="df_fruit_expand"
                        type="button"
                      >
                        -
                      </button>
                    </span>
                  </div>
                  <div
                    class="oj-design-detail"
                  >
                    <div
                      class="oj-design-internal-form"
                    >
                      <ul
                        class="oj-form-group"
                      >
                        <li>
                          <label>
                            Seedless
                            <input
                              data-testid="df_fruit_detail_seedless"
                              type="text"
                              value="true"
                            />
                          </label>
                        </li>
                      </ul>
                    </div>
                  </div>
                </label>
              </li>
            </ul>
          </div>
          <div
            class="buttns"
          >
            <button
              type="submit"
            >
              OK
            </button>
            <button
              type="reset"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <div
        class="oj-design-form-title"
      >
        <h4>
          snack
        </h4>
      </div>
      <form
        data-testid="design-form"
      >
        <div
          class="oj-design-form"
        >
          <ul
            class="oj-form-group"
          >
            <li>
              <label>
                Id
                <input
                  data-testid="df_id"
                  type="text"
                  value="afternoon"
                />
              </label>
            </li>
            <li>
              <label>
                Description
                <input
                  data-testid="df_description"
                  type="text"
                  value=""
                />
              </label>
            </li>
            <li>
              <label>
                Fruit
                <div
                  class="oj-design-row"
                >
                  <span
                    class="oj-design-select"
                  >
                    <select
                      data-testid="df_fruit_select"
                    >
                      <option
                        value=""
                      />
                      <option
                        value="value"
                      >
                        value
                      </option>
                      <option
                        value="apple"
                      >
                        apple
                      </option>
                      <option
                        value="orange"
                      >
                        orange
                      </option>
                    </select>
                  </span>
                  <span
                    class="oj-design-expand"
                  >
                    <button
                      data-testid="df_fruit_expand"
                      type="button"
                    >
                      -
                    </button>
                  </span>
                </div>
                <div
                  class="oj-design-detail"
                >
                  <div
                    class="oj-design-internal-form"
                  >
                    <ul
                      class="oj-form-group"
                    >
                      <li>
                        <label>
                          Seedless
                          <input
                            data-testid="df_fruit_detail_seedless"
                            type="text"
                            value="true"
                          />
                        </label>
                      </li>
                    </ul>
                  </div>
                </div>
              </label>
            </li>
          </ul>
        </div>
        <div
          class="buttns"
        >
          <button
            type="submit"
          >
            OK
          </button>
          <button
            type="reset"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Indexed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <div
          class="oj-design-form-title"
        >
          <h4>
            notes
          </h4>
        </div>
        <form
          data-testid="design-form"
        >
          <div
            class="oj-design-form"
          >
            <ul
              class="oj-form-group"
            >
              <li>
                <label>
                  Id
                  <input
                    data-testid="df_id"
                    type="text"
                    value="tuesday"
                  />
                </label>
              </li>
              <li>
                <label>
                  Description
                  <input
                    data-testid="df_description"
                    type="text"
                    value="Some Meal Notes"
                  />
                </label>
              </li>
              <li>
                <div
                  class="oj-design-form-table"
                >
                  <div
                    class="oj-design-form-table-title"
                  >
                    notes
                  </div>
                  <ul>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_row0_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        >
                          <button
                            data-testid="df_notes_row0_expand"
                            type="button"
                          >
                            +
                          </button>
                        </span>
                      </div>
                      <div
                        class="oj-design-detail"
                      />
                    </li>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_row1_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        >
                          <button
                            data-testid="df_notes_row1_expand"
                            type="button"
                          >
                            +
                          </button>
                        </span>
                      </div>
                      <div
                        class="oj-design-detail"
                      />
                    </li>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_xRow_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        />
                      </div>
                      <div
                        class="oj-design-detail"
                      />
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="buttns"
          >
            <button
              type="submit"
            >
              OK
            </button>
            <button
              type="reset"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <div
        class="oj-design-form-title"
      >
        <h4>
          notes
        </h4>
      </div>
      <form
        data-testid="design-form"
      >
        <div
          class="oj-design-form"
        >
          <ul
            class="oj-form-group"
          >
            <li>
              <label>
                Id
                <input
                  data-testid="df_id"
                  type="text"
                  value="tuesday"
                />
              </label>
            </li>
            <li>
              <label>
                Description
                <input
                  data-testid="df_description"
                  type="text"
                  value="Some Meal Notes"
                />
              </label>
            </li>
            <li>
              <div
                class="oj-design-form-table"
              >
                <div
                  class="oj-design-form-table-title"
                >
                  notes
                </div>
                <ul>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_row0_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      >
                        <button
                          data-testid="df_notes_row0_expand"
                          type="button"
                        >
                          +
                        </button>
                      </span>
                    </div>
                    <div
                      class="oj-design-detail"
                    />
                  </li>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_row1_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      >
                        <button
                          data-testid="df_notes_row1_expand"
                          type="button"
                        >
                          +
                        </button>
                      </span>
                    </div>
                    <div
                      class="oj-design-detail"
                    />
                  </li>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_xRow_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      />
                    </div>
                    <div
                      class="oj-design-detail"
                    />
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="buttns"
        >
          <button
            type="submit"
          >
            OK
          </button>
          <button
            type="reset"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Indexed 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <div
          class="oj-design-form-title"
        >
          <h4>
            notes
          </h4>
        </div>
        <form
          data-testid="design-form"
        >
          <div
            class="oj-design-form"
          >
            <ul
              class="oj-form-group"
            >
              <li>
                <label>
                  Id
                  <input
                    data-testid="df_id"
                    type="text"
                    value="tuesday"
                  />
                </label>
              </li>
              <li>
                <label>
                  Description
                  <input
                    data-testid="df_description"
                    type="text"
                    value="Some Meal Notes"
                  />
                </label>
              </li>
              <li>
                <div
                  class="oj-design-form-table"
                >
                  <div
                    class="oj-design-form-table-title"
                  >
                    notes
                  </div>
                  <ul>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_row0_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        >
                          <button
                            data-testid="df_notes_row0_expand"
                            type="button"
                          >
                            -
                          </button>
                        </span>
                      </div>
                      <div
                        class="oj-design-detail"
                      >
                        <div
                          class="oj-design-internal-form"
                        >
                          <ul
                            class="oj-form-group"
                          >
                            <li>
                              <label>
                                value
                                <input
                                  data-testid="df_notes_row0_detail_value"
                                  type="text"
                                  value="Some Foo"
                                />
                              </label>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </li>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_row1_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        >
                          <button
                            data-testid="df_notes_row1_expand"
                            type="button"
                          >
                            +
                          </button>
                        </span>
                      </div>
                      <div
                        class="oj-design-detail"
                      />
                    </li>
                    <li>
                      <div
                        class="oj-design-row"
                      >
                        <span
                          class="oj-design-select"
                        >
                          <select
                            data-testid="df_notes_xRow_select"
                          >
                            <option
                              value=""
                            />
                            <option
                              value="value"
                            >
                              value
                            </option>
                            <option
                              value="note"
                            >
                              note
                            </option>
                          </select>
                        </span>
                        <span
                          class="oj-design-expand"
                        />
                      </div>
                      <div
                        class="oj-design-detail"
                      />
                    </li>
                  </ul>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="buttns"
          >
            <button
              type="submit"
            >
              OK
            </button>
            <button
              type="reset"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <div
        class="oj-design-form-title"
      >
        <h4>
          notes
        </h4>
      </div>
      <form
        data-testid="design-form"
      >
        <div
          class="oj-design-form"
        >
          <ul
            class="oj-form-group"
          >
            <li>
              <label>
                Id
                <input
                  data-testid="df_id"
                  type="text"
                  value="tuesday"
                />
              </label>
            </li>
            <li>
              <label>
                Description
                <input
                  data-testid="df_description"
                  type="text"
                  value="Some Meal Notes"
                />
              </label>
            </li>
            <li>
              <div
                class="oj-design-form-table"
              >
                <div
                  class="oj-design-form-table-title"
                >
                  notes
                </div>
                <ul>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_row0_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      >
                        <button
                          data-testid="df_notes_row0_expand"
                          type="button"
                        >
                          -
                        </button>
                      </span>
                    </div>
                    <div
                      class="oj-design-detail"
                    >
                      <div
                        class="oj-design-internal-form"
                      >
                        <ul
                          class="oj-form-group"
                        >
                          <li>
                            <label>
                              value
                              <input
                                data-testid="df_notes_row0_detail_value"
                                type="text"
                                value="Some Foo"
                              />
                            </label>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </li>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_row1_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      >
                        <button
                          data-testid="df_notes_row1_expand"
                          type="button"
                        >
                          +
                        </button>
                      </span>
                    </div>
                    <div
                      class="oj-design-detail"
                    />
                  </li>
                  <li>
                    <div
                      class="oj-design-row"
                    >
                      <span
                        class="oj-design-select"
                      >
                        <select
                          data-testid="df_notes_xRow_select"
                        >
                          <option
                            value=""
                          />
                          <option
                            value="value"
                          >
                            value
                          </option>
                          <option
                            value="note"
                          >
                            note
                          </option>
                        </select>
                      </span>
                      <span
                        class="oj-design-expand"
                      />
                    </div>
                    <div
                      class="oj-design-detail"
                    />
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="buttns"
        >
          <button
            type="submit"
          >
            OK
          </button>
          <button
            type="reset"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Text Field 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <div
          class="oj-design-form-title"
        >
          <h4>
            snack
          </h4>
        </div>
        <form
          data-testid="design-form"
        >
          <div
            class="oj-design-form"
          >
            <ul
              class="oj-form-group"
            >
              <li>
                <label>
                  Id
                  <input
                    data-testid="df_id"
                    type="text"
                    value="afternoon"
                  />
                </label>
              </li>
              <li>
                <label>
                  Description
                  <input
                    data-testid="df_description"
                    type="text"
                    value=""
                  />
                </label>
              </li>
              <li>
                <label>
                  Fruit
                  <div
                    class="oj-design-row"
                  >
                    <span
                      class="oj-design-select"
                    >
                      <select
                        data-testid="df_fruit_select"
                      >
                        <option
                          value=""
                        />
                        <option
                          value="value"
                        >
                          value
                        </option>
                        <option
                          value="apple"
                        >
                          apple
                        </option>
                        <option
                          value="orange"
                        >
                          orange
                        </option>
                      </select>
                    </span>
                    <span
                      class="oj-design-expand"
                    >
                      <button
                        data-testid="df_fruit_expand"
                        type="button"
                      >
                        +
                      </button>
                    </span>
                  </div>
                  <div
                    class="oj-design-detail"
                  />
                </label>
              </li>
            </ul>
          </div>
          <div
            class="buttns"
          >
            <button
              type="submit"
            >
              OK
            </button>
            <button
              type="reset"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <div
        class="oj-design-form-title"
      >
        <h4>
          snack
        </h4>
      </div>
      <form
        data-testid="design-form"
      >
        <div
          class="oj-design-form"
        >
          <ul
            class="oj-form-group"
          >
            <li>
              <label>
                Id
                <input
                  data-testid="df_id"
                  type="text"
                  value="afternoon"
                />
              </label>
            </li>
            <li>
              <label>
                Description
                <input
                  data-testid="df_description"
                  type="text"
                  value=""
                />
              </label>
            </li>
            <li>
              <label>
                Fruit
                <div
                  class="oj-design-row"
                >
                  <span
                    class="oj-design-select"
                  >
                    <select
                      data-testid="df_fruit_select"
                    >
                      <option
                        value=""
                      />
                      <option
                        value="value"
                      >
                        value
                      </option>
                      <option
                        value="apple"
                      >
                        apple
                      </option>
                      <option
                        value="orange"
                      >
                        orange
                      </option>
                    </select>
                  </span>
                  <span
                    class="oj-design-expand"
                  >
                    <button
                      data-testid="df_fruit_expand"
                      type="button"
                    >
                      +
                    </button>
                  </span>
                </div>
                <div
                  class="oj-design-detail"
                />
              </label>
            </li>
          </ul>
        </div>
        <div
          class="buttns"
        >
          <button
            type="submit"
          >
            OK
          </button>
          <button
            type="reset"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Test Render Text Field 2`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="oj-design-form-main"
      >
        <div
          class="oj-design-form-title"
        >
          <h4>
            snack
          </h4>
        </div>
        <form
          data-testid="design-form"
        >
          <div
            class="oj-design-form"
          >
            <ul
              class="oj-form-group"
            >
              <li>
                <label>
                  Id
                  <input
                    data-testid="df_id"
                    type="text"
                    value="afternoon"
                  />
                </label>
              </li>
              <li>
                <label>
                  Description
                  <input
                    data-testid="df_description"
                    type="text"
                    value="An Afternoon Snack"
                  />
                </label>
              </li>
              <li>
                <label>
                  Fruit
                  <div
                    class="oj-design-row"
                  >
                    <span
                      class="oj-design-select"
                    >
                      <select
                        data-testid="df_fruit_select"
                      >
                        <option
                          value=""
                        />
                        <option
                          value="value"
                        >
                          value
                        </option>
                        <option
                          value="apple"
                        >
                          apple
                        </option>
                        <option
                          value="orange"
                        >
                          orange
                        </option>
                      </select>
                    </span>
                    <span
                      class="oj-design-expand"
                    >
                      <button
                        data-testid="df_fruit_expand"
                        type="button"
                      >
                        -
                      </button>
                    </span>
                  </div>
                  <div
                    class="oj-design-detail"
                  >
                    <div
                      class="oj-design-internal-form"
                    >
                      <ul
                        class="oj-form-group"
                      >
                        <li>
                          <label>
                            Colour
                            <input
                              data-testid="df_fruit_detail_colour"
                              type="text"
                              value="Green"
                            />
                          </label>
                        </li>
                        <li>
                          <ul
                            class="oj-form-group"
                          >
                            <li>
                              <label>
                                Taste
                                <input
                                  data-testid="df_fruit_detail1_taste"
                                  type="text"
                                  value="Tangy"
                                />
                              </label>
                            </li>
                            <li>
                              <label>
                                Size
                                <input
                                  data-testid="df_fruit_detail1_size"
                                  type="text"
                                  value=""
                                />
                              </label>
                            </li>
                          </ul>
                        </li>
                      </ul>
                    </div>
                  </div>
                </label>
              </li>
            </ul>
          </div>
          <div
            class="buttns"
          >
            <button
              type="submit"
            >
              OK
            </button>
            <button
              type="reset"
            >
              Cancel
            </button>
          </div>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="oj-design-form-main"
    >
      <div
        class="oj-design-form-title"
      >
        <h4>
          snack
        </h4>
      </div>
      <form
        data-testid="design-form"
      >
        <div
          class="oj-design-form"
        >
          <ul
            class="oj-form-group"
          >
            <li>
              <label>
                Id
                <input
                  data-testid="df_id"
                  type="text"
                  value="afternoon"
                />
              </label>
            </li>
            <li>
              <label>
                Description
                <input
                  data-testid="df_description"
                  type="text"
                  value="An Afternoon Snack"
                />
              </label>
            </li>
            <li>
              <label>
                Fruit
                <div
                  class="oj-design-row"
                >
                  <span
                    class="oj-design-select"
                  >
                    <select
                      data-testid="df_fruit_select"
                    >
                      <option
                        value=""
                      />
                      <option
                        value="value"
                      >
                        value
                      </option>
                      <option
                        value="apple"
                      >
                        apple
                      </option>
                      <option
                        value="orange"
                      >
                        orange
                      </option>
                    </select>
                  </span>
                  <span
                    class="oj-design-expand"
                  >
                    <button
                      data-testid="df_fruit_expand"
                      type="button"
                    >
                      -
                    </button>
                  </span>
                </div>
                <div
                  class="oj-design-detail"
                >
                  <div
                    class="oj-design-internal-form"
                  >
                    <ul
                      class="oj-form-group"
                    >
                      <li>
                        <label>
                          Colour
                          <input
                            data-testid="df_fruit_detail_colour"
                            type="text"
                            value="Green"
                          />
                        </label>
                      </li>
                      <li>
                        <ul
                          class="oj-form-group"
                        >
                          <li>
                            <label>
                              Taste
                              <input
                                data-testid="df_fruit_detail1_taste"
                                type="text"
                                value="Tangy"
                              />
                            </label>
                          </li>
                          <li>
                            <label>
                              Size
                              <input
                                data-testid="df_fruit_detail1_size"
                                type="text"
                                value=""
                              />
                            </label>
                          </li>
                        </ul>
                      </li>
                    </ul>
                  </div>
                </div>
              </label>
            </li>
          </ul>
        </div>
        <div
          class="buttns"
        >
          <button
            type="submit"
          >
            OK
          </button>
          <button
            type="reset"
          >
            Cancel
          </button>
        </div>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
